--- a/pub/index.html
+++ b/pub/index.html
@@ -1,2 +1,2 @@
 <META http-equiv='Content-Type' content='text/html; charset=UTF-8'>
-<HTML><BODY><CENTER><H1><font face="Tahoma">Welcome to the Home Page for the org-wmaop-test Package.</font></H1></CENTER></BODY></HTML>
+<HTML><BODY><CENTER><H1><font face="Tahoma">Welcome to the Home Page for the OrgWmAOPTest Package.</font></H1></CENTER></BODY></HTML>
